apollo-router/tests/integration/query_planner/snapshots/integration_tests__integration__query_planner__error_paths__nested_response_failure_malformed.snap
---
source: apollo-router/tests/integration/query_planner/error_paths.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "Table",
        "inStock": true,
        "reviews": [
          {
            "id": "1",
            "author": {
              "username": "@ada",
              "name": null
            }
          },
          {
            "id": "2",
            "author": {
              "username": "@alan",
              "name": null
            }
          }
        ]
      },
      {
        "name": "Chair",
        "inStock": false,
        "reviews": [
          {
            "id": "3",
            "author": {
              "username": "@alan",
              "name": null
            }
          }
        ]
      }
    ]
  },
  "errors": [
    {
      "message": "response was malformed: graphql response without data must contain at least one error",
      "path": [
        "topProducts",
        0,
        "reviews",
        0,
        "author"
      ],
      "extensions": {
        "service": "accounts",
        "reason": "graphql response without data must contain at least one error",
        "code": "SUBREQUEST_MALFORMED_RESPONSE"
      }
    },
    {
      "message": "response was malformed: graphql response without data must contain at least one error",
      "path": [
        "topProducts",
        0,
        "reviews",
        1,
        "author"
      ],
      "extensions": {
        "service": "accounts",
        "reason": "graphql response without data must contain at least one error",
        "code": "SUBREQUEST_MALFORMED_RESPONSE"
      }
    },
    {
      "message": "response was malformed: graphql response without data must contain at least one error",
      "path": [
        "topProducts",
        1,
        "reviews",
        0,
        "author"
      ],
      "extensions": {
        "service": "accounts",
        "reason": "graphql response without data must contain at least one error",
        "code": "SUBREQUEST_MALFORMED_RESPONSE"
      }
    }
  ]
}
