apollo-router/tests/integration/query_planner/snapshots/integration_tests__integration__query_planner__error_paths__second_level_response_failure.snap
---
source: apollo-router/tests/integration/query_planner/error_paths.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "Table",
        "inStock": null,
        "reviews": [
          {
            "id": "1",
            "author": {
              "username": "@ada",
              "name": "Ada"
            }
          },
          {
            "id": "2",
            "author": {
              "username": "@alan",
              "name": "Alan"
            }
          }
        ]
      },
      {
        "name": "Chair",
        "inStock": false,
        "reviews": [
          {
            "id": "3",
            "author": {
              "username": "@alan",
              "name": "Alan"
            }
          }
        ]
      }
    ]
  },
  "errors": [
    {
      "message": "inventory error",
      "path": [
        "topProducts",
        0
      ],
      "extensions": {
        "service": "inventory"
      }
    }
  ]
}
