apollo-router/tests/integration/query_planner/snapshots/integration_tests__integration__query_planner__error_paths__top_level_response_failure.snap
---
source: apollo-router/tests/integration/query_planner/error_paths.rs
expression: response
---
{
  "data": {
    "topProducts": [
      {
        "name": "Table",
        "inStock": true,
        "reviews": [
          {
            "id": "1",
            "author": {
              "username": "@ada",
              "name": "Ada"
            }
          },
          {
            "id": "2",
            "author": {
              "username": "@alan",
              "name": "Alan"
            }
          }
        ]
      },
      null
    ]
  },
  "errors": [
    {
      "message": "products error",
      "path": [
        "topProducts",
        1
      ],
      "extensions": {
        "service": "products"
      }
    }
  ]
}
