apollo-router/tests/integration/query_planner/snapshots/integration_tests__integration__query_planner__error_paths__top_level_response_failure_malformed.snap
---
source: apollo-router/tests/integration/query_planner/error_paths.rs
expression: response
---
{
  "data": {
    "topProducts": null
  },
  "errors": [
    {
      "message": "response was malformed: graphql response without data must contain at least one error",
      "path": [],
      "extensions": {
        "service": "products",
        "reason": "graphql response without data must contain at least one error",
        "code": "SUBREQUEST_MALFORMED_RESPONSE"
      }
    }
  ]
}
